# spaceships-database

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml  requirements.txt  spaceships.Dockerfile  sqlite.Dockerfile
sql/: crew.sql  fleet.sql
src/: db.py  empire.sql  main.py  settings.py  ship.sql  star_system.sql  util.py
src/database/: base.py  db.py
src/factories/: __init__.py  celestial_bodies_util.py  crew.py  empire.py  empire_score.py  empire_species.txt  empire_star_systems.py  empire_suffix.txt  empires_util.py  fleet.py  fleets.py  galaxy.py  planet_resources.py  planets.py  ship.py  ship_mods.json  ship_mods.py  ship_ranks.py  ship_templates.py  ships.py  ships_util.py  stars.py  utils.py
src/factories/assets/: empire.json  empire_species.txt  empire_suffix.txt  fleets_prefix.txt  fleets_suffix.txt  planets.json  ship_mods.json  ship_suffix.txt  ships.json  stars.json  stars_prefix.txt
src/factories/old/: fleet.py  ship.py  ship_mods.py
src/factories/utils/: celestial_bodies_util.py  empires_util.py  ships_empire_util.py  ships_util.py  util.py
src/models/: __init__.py  crew.py  empire.py  fleet.py  pg_ship.py  ship.py  star_system.py
src/scratch/: check_repeats.py  my_data_model_diagram  plot3.ipynb  plot_pdf.ipynb  plot_pdf2.ipynb  scratch3.ipynb  viz.py
