[tool.poetry]
name = "spaceships-database"
version = "0.1.0"
description = "Sample database for MySQL, PostgreSQL, SQLite"
authors = ["Alex Chang <ac4294@columbia.edu>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/alexdaiii/spaceships-database"
repository = "https://github.com/alexdaiii/spaceships-database"

[tool.poetry.dependencies]
python = "^3.12,<3.13"
sqlalchemy = "^2.0.23"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
factory-boy = "^3.3.0"
psycopg2-binary = "^2.9.9"
pymysql = "^1.1.0"
colorful = "^0.5.5"
faker = "^20.0.3"
cryptography = "^41.0.5"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
pandas = "^2.1.3"
networkx = "^3.2.1"
isort = "^5.12.0"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
sqlalchemy-data-model-visualizer = "^0.1.3"
graphviz = "^0.20.1"
jupyter = "^1.0.0"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
